vcluster_versioned_docs/version-0.28.0/configure/vcluster-yaml/control-plane/components/backing-store/database/external.mdx
---
title: External database
sidebar_label: external
sidebar_position: 2
sidebar_class_name: pro host-nodes private-nodes standalone
description: Configure an external database as the virtual cluster's backing store for enhanced performance and scalability.
---

import ConfigReference from "../../../../../../_partials/config/controlPlane/backingStore/database/external.mdx";
import ProAdmonition from "../../../../../../_partials/admonitions/pro-admonition.mdx";

<ProAdmonition />

## Introduction

This guide explains how to configure an external database as the backing store for a virtual cluster. A backing store is a persistent storage solution that maintains the state and data of the virtual cluster. Using an external database can provide better performance, scalability, and data persistence compared to the default embedded storage.

Configure this feature to use an external database such as MySQL or PostgreSQL for your virtual cluster's backing store.

```yaml title="External database configuration"
controlPlane:
  backingStore:
    database:
      external:
        enabled: true
        dataSource: CONNECTION_STRING
        connector: CONNECTOR_STRING
```

## Prerequisites

Before configuring an external database for your virtual cluster, ensure you have the following prerequisites based on your chosen method:

### Configure data source (direct connection)

- A running MySQL or PostgreSQL database server
- Admin credentials and connection string for the database
- Network connectivity from the virtual cluster to the database server

### Configure connector (platform-managed)

:::important Platform Setup Required
The connector method requires the vCluster Platform to be installed and properly configured before you can use external databases. This is a prerequisite that must be completed by an administrator.
:::

1. **vCluster Platform installation**: The [vCluster Platform](/platform/install/quick-start-guide) must be installed and accessible in your Kubernetes cluster. If you don't have the platform installed yet, follow the [installation guide](/platform/install/quick-start-guide) first.

2. **Database connector secret**: A platform administrator must create a [database connector secret](/platform/administer/connector/database) in the platform. This involves:
   - Creating a secret with admin credentials to your database server
   - Labeling the secret with `loft.sh/connector-type: "shared-database"`
   - Storing it in the same namespace as the platform

3. **Platform connection**: Your virtual cluster must be [connected to the platform](/vcluster/configure/vcluster-yaml/external/platform/api-key) using one of these methods:
   - **Shared access key** (recommended): Create a single Kubernetes secret with platform credentials that multiple virtual clusters can reference
   - **Dedicated access key**: Configure individual authentication for each virtual cluster

:::info
The **connector** option provides automatic database provisioning, credential management, and cleanup when the virtual cluster is deleted. The **dataSource** option gives you direct control but requires manual database and user management.
:::

## Connector and data source

There are two mutually exclusive options for using an external backing store.

`dataSource`: assign a connection string to `dataSource` that the virtual cluster uses for its control plane backing store.

`connector`: assign a name of a [connector secret](/platform/administer/connector/database) that exists in an instance of the platform in the installed namespace. The platform uses the secret to automatically provision a separate database within the database server for the virtual cluster. It also creates a non-privileged user that can only interact with the virtual cluster's database. The virtual cluster receives a connection string built from the user and database.

|                               | Connector | DataSource |
| ----------------------------- | --------- | ---------- |
| MySQL Support                 | Yes       | Yes        |
| PostgreSQL Support            | Yes       | Yes        |
| Share Across virtual clusters | Yes       | No         |
| Automatic DB Cleanup          | Yes       | No         |
| Credential stored in secret   | Yes       | No         |

### Datasource configuration

Replace `CONNECTION_STRING` with the connection string for your database. Examples:

- PostgreSQL: `postgres://username:password@hostname:5432/vcluster-db`
- MySQL: `mysql://root:password@tcp(192.168.86.9:30360)/vcluster`

### Connector configuration

The connector method requires several setup steps to be completed before you can use it in your virtual cluster configuration:

#### Setup steps (for administrators)

1. **Install vCluster Platform** (if not already installed):
   ```bash
   helm upgrade --install vcluster-platform vcluster-platform/vcluster-platform \
     --namespace vcluster-platform \
     --create-namespace
   ```
   See the [platform installation guide](/platform/install/quick-start-guide) for detailed instructions.

2. **Create a database connector secret**:
   ```bash
   kubectl create secret generic my-database-connector \
     --namespace=vcluster-platform \
     --from-literal=endpoint="your-database-endpoint" \
     --from-literal=password="your-database-password" \
     --from-literal=port="3306" \
     --from-literal=user="your-database-admin-user"

   kubectl label secret my-database-connector \
     --namespace=vcluster-platform \
     loft.sh/connector-type=shared-database
   ```
   See the [database connector documentation](/platform/administer/connector/database) for more details.

3. **Create platform access credentials** (for virtual cluster connection):
   Follow the [API key configuration guide](/vcluster/configure/vcluster-yaml/external/platform/api-key) to set up authentication.

#### Using the connector in your virtual cluster

Once the above prerequisites are met, you can reference the connector in your virtual cluster configuration:

```yaml
controlPlane:
  backingStore:
    database:
      external:
        enabled: true
        connector: my-database-connector  # Name of the connector secret created above
```

:::note
The virtual cluster must be able to connect to the platform to use the connector. This is typically done by configuring a platform [API key](/vcluster/configure/vcluster-yaml/external/platform/api-key). Connecting to the platform allows for centralized management and monitoring of virtual clusters, enhancing overall operational efficiency.
:::

## Config reference

<ConfigReference />
